--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "strapi": "strapi"
   },
   "devDependencies": {
-    "@strapi/provider-upload-cloudinary": "^4.2.0"
+    "@strapi/provider-upload-cloudinary": "^4.2.0",
+    "strapi-plugin-populate-deep": "^0.1.2"
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.1.12",
